--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import '@alamtheinnov/flashtoast/dist/flashtoast.css';
 
 // TailwindCSS
 @import "tailwindcss/base";
